[gd_scene load_steps=10 format=3 uid="uid://cvuofhgxo0twx"]

[ext_resource type="Script" path="res://Dogs/dog.gd" id="1_ipha4"]
[ext_resource type="Script" path="res://Dogs/StateMachine/state_machine.gd" id="2_je2d1"]
[ext_resource type="Script" path="res://Dogs/StateMachine/sleep_state.gd" id="3_i35uo"]
[ext_resource type="Texture2D" uid="uid://blwwd65qj7rob" path="res://Dogs/Untitled_Artwork.png" id="4_h0tuj"]
[ext_resource type="Script" path="res://Dogs/StateMachine/idle_state.gd" id="4_p1ps6"]
[ext_resource type="Script" path="res://Dogs/StateMachine/eat_state.gd" id="5_54gw0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xm03h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_h0tuj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dmklv"]
radius = 27.0
height = 96.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uy51d"]
radius = 40.0
height = 118.0

[node name="Dog" type="CharacterBody2D"]
script = ExtResource("1_ipha4")

[node name="TickTimer" type="Timer" parent="."]
autostart = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_je2d1")

[node name="SleepState" type="Node" parent="StateMachine"]
script = ExtResource("3_i35uo")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("4_p1ps6")

[node name="EatState" type="Node" parent="StateMachine"]
script = ExtResource("5_54gw0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, -2)
sprite_frames = SubResource("SpriteFrames_xm03h")
animation = &"idle"
offset = Vector2(-8, -34)

[node name="DogButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = -54.0
offset_top = -60.0
offset_right = 54.0

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -27)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_dmklv")

[node name="InteractionArea2D" type="Area2D" parent="."]

[node name="InteractionCollision" type="CollisionShape2D" parent="InteractionArea2D"]
position = Vector2(-2, -33)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_uy51d")

[connection signal="pressed" from="DogButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="DogButton" to="." method="_on_dog_button_pressed"]
